--- a/src/content/configuration/resolve.mdx
+++ b/src/content/configuration/resolve.mdx
@@ -467,7 +467,7 @@ W> Changes to cached paths may cause failure in rare cases.
 
 `boolean`
 
-Use synchronous filesystem calls for the resolver.
+Use synchronous filesystem calls for the 
 
 **webpack.config.js**
 
@@ -497,7 +497,7 @@ module.exports = {
 };
 ```
 
-### resolve.preferRelative
+### resolve.Relative
 
 `boolean`
 
@@ -534,7 +534,7 @@ const a = new URL('./module/path', import.meta.url);
 
 Prefer absolute paths to [`resolve.roots`](#resolveroots) when resolving.
 
-**wepack.config.js**
+**webpack.config.js**
 
 ```js
 module.exports = {
